HOTFIX - Fixed details canvas overflow issue

--- a/src/components/contacts/Contactlist.module.scss
+++ b/src/components/contacts/Contactlist.module.scss
@@ -1,4 +1,5 @@
-@use '../../../styles/variables' as var;
+// @use '../../../styles/variables' as var;
+@import '../../../styles/variables';
 
 .contact_list_container {
   // margin-top: var.$spacing-5x;
@@ -16,12 +17,12 @@
   top: 250px;
   background: #fff;
 
-  color: var.$txt-color;
+  color: $txt-color;
   font-weight: bold;
   display: grid;
   grid-template-columns: 10fr 15fr 5fr 5fr 10fr;
-  padding-bottom: var.$spacing-small;
-  border-bottom: 1px solid var.$dark-grey;
+  padding-bottom: $spacing-small;
+  border-bottom: 1px solid $dark-grey;
 
   > div:first-child {
     margin-left: 0.75rem;
@@ -74,8 +75,8 @@
 .contact_card {
   display: grid;
   grid-template-columns: 10fr 15fr 5fr 5fr 10fr;
-  color: var.$txt-color;
-  border-bottom: 1px solid var.$light-grey;
+  color: $txt-color;
+  border-bottom: 1px solid $light-grey;
   padding: 0.9rem 0 0.9rem 0;
   > div:first-child {
     margin-left: 0.75rem;
